--- a/Instructions/CM-HW-WeatherPy.ipynb
+++ b/Instructions/CM-HW-WeatherPy.ipynb
@@ -1171,6 +1171,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analysis\n",
+      "---------------------------------------\n",
+      "TREND 1: Temperature seems to have a clear correlation with latitude.\n",
+      "TREND 2: There is no strong relationship between latitude and cloudiness.\n",
+      "TREND 3: There is no strong relationship between latitude and wind speed. However, in northern hemispheres there is a flurry of cities with over 20 mph of wind.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Analysis\")\n",
+    "print(\"---------------------------------------\")\n",
+    "print(\"TREND 1: Temperature seems to have a clear correlation with latitude.\")\n",
+    "print(\"TREND 2: There is no strong relationship between latitude and cloudiness.\")\n",
+    "print(\"TREND 3: There is no strong relationship between latitude and wind speed. However, in northern hemispheres there is a flurry of cities with over 20 mph of wind.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
